--- a/Happy_Customer_Bank_ver2_0.ipynb
+++ b/Happy_Customer_Bank_ver2_0.ipynb
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "id": "mY6-NFT6335l"
    },
@@ -1022,6 +1022,13 @@
    "source": [
     "Interest_Rate_imp = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
     "df['Interest_Rate'] = Interest_Rate_imp.fit_transform(df[['Interest_Rate']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data transformation"
    ]
   },
   {
@@ -1680,6 +1687,13 @@
    ],
    "source": [
     "y_test.value_counts()[0] / y_test.value_counts()[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -3216,7 +3230,6 @@
     }
    ],
    "source": [
-    "#raise SystemExit()\n",
     "test"
    ]
   },
