adding the learning rate hyperparam in SGD

--- a/Happy_Customer_Bank_ver2_0.ipynb
+++ b/Happy_Customer_Bank_ver2_0.ipynb
@@ -3276,7 +3276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "id": "2rPuqDw_AnJH"
    },
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "id": "idjsAXpAA1yN"
    },
@@ -3312,7 +3312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "id": "mzeDKHK0BG0V"
    },
@@ -3329,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "id": "QeOJI06QBl-_"
    },
@@ -3344,7 +3344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "id": "fO_5-fFmCKk3"
    },
@@ -3356,7 +3356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3365,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3373,7 +3373,65 @@
     "id": "gNpfTqPJYnjT",
     "outputId": "e00b54a7-a6e3-4e2f-a449-024cfcff661c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 37717 entries, 0 to 37716\n",
+      "Data columns (total 36 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Monthly_Income           37717 non-null  float64\n",
+      " 1   Loan_Amount_Applied      37717 non-null  float64\n",
+      " 2   Loan_Tenure_Applied      37717 non-null  float64\n",
+      " 3   Existing_EMI             37717 non-null  float64\n",
+      " 4   Var5                     37717 non-null  float64\n",
+      " 5   Loan_Amount_Submitted    37717 non-null  float64\n",
+      " 6   Loan_Tenure_Submitted    37717 non-null  float64\n",
+      " 7   Interest_Rate            37717 non-null  float64\n",
+      " 8   EMI_Loan_Submitted       37717 non-null  float64\n",
+      " 9   age                      37717 non-null  float64\n",
+      " 10  Gender_Male              37717 non-null  float64\n",
+      " 11  Salary_Account_medium    37717 non-null  float64\n",
+      " 12  Salary_Account_small     37717 non-null  float64\n",
+      " 13  Mobile_Verified_Y        37717 non-null  float64\n",
+      " 14  Var1_HAXA                37717 non-null  float64\n",
+      " 15  Var1_HAXB                37717 non-null  float64\n",
+      " 16  Var1_HAXM                37717 non-null  float64\n",
+      " 17  Var1_HAYT                37717 non-null  float64\n",
+      " 18  Var1_HAZD                37717 non-null  float64\n",
+      " 19  Var1_HBXA                37717 non-null  float64\n",
+      " 20  Var1_HBXB                37717 non-null  float64\n",
+      " 21  Var1_HBXC                37717 non-null  float64\n",
+      " 22  Var1_HBXD                37717 non-null  float64\n",
+      " 23  Var1_HBXH                37717 non-null  float64\n",
+      " 24  Var1_HBXX                37717 non-null  float64\n",
+      " 25  Var1_HCXD                37717 non-null  float64\n",
+      " 26  Var1_HCXF                37717 non-null  float64\n",
+      " 27  Var1_HCXG                37717 non-null  float64\n",
+      " 28  Var1_HCYS                37717 non-null  float64\n",
+      " 29  Var1_HVYS                37717 non-null  float64\n",
+      " 30  Filled_Form_Y            37717 non-null  float64\n",
+      " 31  Device_Type_Web-browser  37717 non-null  float64\n",
+      " 32  Var2_C                   37717 non-null  float64\n",
+      " 33  Var2_E                   37717 non-null  float64\n",
+      " 34  Var2_F                   37717 non-null  float64\n",
+      " 35  Var2_G                   37717 non-null  float64\n",
+      "dtypes: float64(36)\n",
+      "memory usage: 10.4 MB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\anaconda\\envs\\myenv\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:188: UserWarning: Found unknown categories in columns [3, 6] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "X_test = pipe_vif.transform(X_test)\n",
     "X_test.info()"
@@ -3381,7 +3439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3395,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3404,7 +3462,115 @@
     "id": "fuDlunhPHJ6V",
     "outputId": "9c6d5767-b4c3-4561-fe26-91707e5a36a6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LoggedIn</th>\n",
+       "      <th>Disbursed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID000026A10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID000054C40</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID000066O10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID000110G00</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID000113J30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37712</th>\n",
+       "      <td>ID124809J40</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37713</th>\n",
+       "      <td>ID124817R20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37714</th>\n",
+       "      <td>ID124820U00</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37715</th>\n",
+       "      <td>ID124822W20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37716</th>\n",
+       "      <td>ID124823X30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>37717 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          LoggedIn  Disbursed\n",
+       "0      ID000026A10          0\n",
+       "1      ID000054C40          0\n",
+       "2      ID000066O10          0\n",
+       "3      ID000110G00          0\n",
+       "4      ID000113J30          0\n",
+       "...            ...        ...\n",
+       "37712  ID124809J40          0\n",
+       "37713  ID124817R20          0\n",
+       "37714  ID124820U00          0\n",
+       "37715  ID124822W20          0\n",
+       "37716  ID124823X30          0\n",
+       "\n",
+       "[37717 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = pd.DataFrame({'LoggedIn' : test['ID'], 'Disbursed' : pipe_model.predict(X_test)})\n",
     "results"
@@ -3412,9 +3578,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results['Disbursed'].sum()"
    ]
